<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <ImageView
        android:id="@+id/bathtoy_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:padding="16dp"
        android:src="@drawable/camera" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="4dp">

        <EditText
            android:id="@+id/edit_bathtoy_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_bath_toy_name"
            android:inputType="textCapWords" />

        <LinearLayout
            android:id="@+id/container_measurement1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_bathtoy_quantity"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_bath_toy_quantity"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/label_quantity_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_bath_toy_quantity" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/plus_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorAccent"
                android:text="+"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/minus_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/colorAccent"
                android:text="-"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_bathtoy_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_bath_toy_price"
                android:inputType="number" />

            <TextView
                android:id="@+id/label_weight_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_bath_toy_price" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:text="order more"
        android:textColor="@android:color/white" />
</LinearLayout>